--- a/reynolds-switch.ioc
+++ b/reynolds-switch.ioc
@@ -67,7 +67,7 @@ NVIC.TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=UV_OUTA
+PA0.GPIO_Label=LAMP2_OUTA
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
@@ -102,11 +102,11 @@ PA6.GPIO_Label=DIP_IN2
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=LAMP2_OUTB
+PA7.GPIO_Label=UV_OUTB
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=LAMP2_OUTA
+PA8.GPIO_Label=UV_OUTA
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9\ [PA11].GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -129,7 +129,7 @@ PC14-OSCX_IN\ (PC14).GPIO_PuPd=GPIO_NOPULL
 PC14-OSCX_IN\ (PC14).Locked=true
 PC14-OSCX_IN\ (PC14).Signal=GPIO_Output
 PC15-OSCX_OUT\ (PC15).GPIOParameters=GPIO_Label
-PC15-OSCX_OUT\ (PC15).GPIO_Label=UV_OUTB
+PC15-OSCX_OUT\ (PC15).GPIO_Label=LAMP2_OUTB
 PC15-OSCX_OUT\ (PC15).Locked=true
 PC15-OSCX_OUT\ (PC15).Signal=GPIO_Output
 PF2-NRST.GPIOParameters=GPIO_Label
